<resources>
    <string name="app_name">MovieHub</string>

    <!-- Fragment Names -->
    <string name="movies">Movies</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="details">Details</string>
    <string name="settings">Settings</string>

    <!-- Movies Fragment Strings -->
    <string name="popular">Popular</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="highest_rated_movies">Highest Rated Movies of All Times</string>
    <string name="upcoming">Upcoming</string>
    <string name="stay_updated">Stay Updated with the Latest Movies</string>
    <string name="no_internet_connection">No internet connection, please</string>
    <string name="retry">Retry…</string>

    <!-- Search Fragment -->
    <string name="search_result">Last Search For:</string>
    <string name="search_result_for">Last Search For: %1$s</string>

    <!-- Library Fragment -->
    <string name="your_library_list">Your Library List</string>
    <string name="delete_all_movies">Delete all movies</string>
    <string name="empty_message">Add movies to show theme here</string>

    <!-- Details Fragment -->
    <string name="add_to_library">Add to Library</string>
    <string name="successfully_added">Movie Successfully Added</string>
    <string name="delete_from_library">Delete From Library</string>
    <string name="successfully_deleted">Movie Successfully Deleted</string>
    <string name="cancel">Cancel</string>
    <string name="undo">Undo</string>
    <string name="ok">OK</string>

    <!-- Settings Preference Strings -->
    <string name="preference_application_configuration">Application Configuration</string>
    <string name="preference_about">About</string>
    <string name="preference_dark_mode_title">Dark Mode</string>
    <string name="preference_dark_mode_key" translatable="false">dark mode key</string>
    <string name="preference_dark_mode_summary_on">Dark mode is enabled</string>
    <string name="preference_dark_mode_summary_off">Dark mode is disabled</string>
    <string name="preference_language_title">Language</string>
    <string name="preference_language_key" translatable="false">language key</string>
    <string name="preference_language_summary_on">Arabic</string>
    <string name="preference_language_summary_off">English</string>
    <string name="preference_contact_me_key" translatable="false">contact me</string>
    <string name="preference_contact_me_title">Contact Me</string>
    <string name="preference_contact_me_summary">Any suggestions or issues please don\'t hesitate to contact me</string>
    <string name="preference_version_key" translatable="false">version key</string>
    <string name="preference_version_summary">%1$s (%2$d)</string>
    <string name="preference_version_title">Application Version</string>

    <!-- Error Strings -->
    <string name="error_no_result">No Results Found</string>

</resources>