<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/moviesFragment">

    <fragment
        android:id="@+id/moviesFragment"
        android:name="com.ss.moviehub.ui.movies.MoviesFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movies">
        <action
            android:id="@+id/action_moviesFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_moviesFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.ss.moviehub.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_searchFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.ss.moviehub.ui.library.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library">
        <action
            android:id="@+id/action_libraryFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_libraryFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.ss.moviehub.ui.details.DetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="movie"
            app:argType="com.ss.moviehub.models.Result" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.ss.moviehub.ui.settings.SettingsFragment"
        android:label="@string/settings" />

</navigation>